--- a/backend/Blogs_app/frontend/package.json
+++ b/backend/Blogs_app/frontend/package.json
@@ -8,8 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
